--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,45 +3,33 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The Twelve-Factor App<%= I18n.t(:translation) %></title>
-  <meta name="description" content="A methodology for building modern, scalable, maintainable software-as-a-service apps.">
-  <meta name="author" content="Adam Wiggins">
+  <title>Rabeet Fatmi</title>
+  <meta name="description" content="Rabeet Fatmi, Software Engineer from Florida Gulf Coast University.">
+  <meta name="author" content="Rabeet Fatmi">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="/favicon.ico">
+  <!--<link rel="shortcut icon" href="/favicon.ico">-->
 
   <link rel="stylesheet" href="/css/screen.css" media="screen">
   <link rel="stylesheet" href="/css/mobile.css" media="screen">
-
-  <script type="text/javascript" src="http://use.typekit.com/rsq7tro.js"></script>
-  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+  
+  <script src="//use.typekit.net/yub2wpl.js"></script>
+  <script>try{Typekit.load();}catch(e){}</script>
+  
 </head>
 <body>
-  <% if ENV['GOOGLE_TAG_MANAGER_ACCOUNT'] %>
-  <!-- Google Tag Manager -->
-  <noscript><iframe src="//www.googletagmanager.com/ns.html?id=<%= ENV['GOOGLE_TAG_MANAGER_ACCOUNT'] %>"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','<%= ENV['GOOGLE_TAG_MANAGER_ACCOUNT'] %>');</script>
-  <!-- End Google Tag Manager -->
-  <% end %>
 
   <header>
-    <h1><a href="./" title="The Twelve-Factor App">The Twelve-Factor App</a></h1>
+    <div class="pic"></div>
+    <div class= "tk-apolline-sc"><h1><a href="./" title="Rabeet Fatmi">Rabeet Fatmi</a></h1></div>
   </header>
 
   <%= yield %>
 
   <footer>
-  <div id="locales"><%= render_locales(@factor) %></div>
-  <div>Written by Adam Wiggins</div>
-  <div>Last updated Jan 30, 2012</div>
-  <div><a href="https://github.com/heroku/12factor">Sourcecode</a></div>
-  <div><a href="/12factor.epub">Download ePub Book</a></div>
-  <div><a href="https://www.heroku.com/policy/privacy">Privacy Policy</a></div>
+  <div>Rabeetfatmi.com</div>
+  <div><a href="https://www.linkedin.com/pub/rabeet-fatmi/80/398/9aa">LinkedIn</a></div>
+  <div><a mailto:"rabeetfatmi@gmail.com">Email Me!</a></div>
 </footer>
 </body>
 </html>
