--- a/views/layout.erb
+++ b/views/layout.erb
@@ -22,6 +22,7 @@
   <header>
     <div class="pic"></div>
     <div class= "tk-apolline-sc"><h1><a href="./" title="Rabeet Fatmi">Rabeet Fatmi</a></h1></div>
+    <h4>Software Engineer / Web Developer</h4>
   </header>
 
   <%= yield %>
@@ -29,7 +30,9 @@
   <footer>
   <div>Rabeetfatmi.com</div>
   <div><a href="https://www.linkedin.com/pub/rabeet-fatmi/80/398/9aa">LinkedIn</a></div>
-  <div><a mailto:"rabeetfatmi@gmail.com">Email Me!</a></div>
+  <div><a href="https://github.com/rabeet/">GitHub</a></div>
+  <div><a href="https://bitbucket.org/rabeet">BitBucket</a></div>
+  <div><a href="mailto:raf6000@gmail.com">Email Me!</a></div>
 </footer>
 </body>
 </html>
