--- a/views/home.erb
+++ b/views/home.erb
@@ -1,7 +1,6 @@
 <section class="abstract">
   <article><%= render_markdown('intro') %></article>
-  <article><%= render_markdown('background') %></article>
-  <article><%= render_markdown('who') %></article>
+  <article><%= render_markdown('projects') %></article>
 </section>
 
 <section class="concrete">
