--- a/views/layout.erb
+++ b/views/layout.erb
@@ -30,7 +30,7 @@
   <footer>
   <div>Rabeetfatmi.com</div>
   <div><a href="https://www.linkedin.com/pub/rabeet-fatmi/80/398/9aa">LinkedIn</a></div>
-  <div><a href="http://bit.ly/1AqML0V">Resume</a></div>
+  <!--<div><a href="http://bit.ly/1AqML0V">Resume</a></div>-->
   <div><a href="https://github.com/rabeet/">GitHub</a></div>
   <div><a href="https://bitbucket.org/rabeet">BitBucket</a></div>
   <div><a href="mailto:raf6000@gmail.com">Email Me!</a></div>
