--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -41,7 +41,7 @@ header h1 a {
 }
 
 .pic {
-  background: url(/images/pic2.jpg) top center no-repeat;
+  background: url(/images/pic.jpg) top center no-repeat;
   color: #FFFFFF;
   display: block;
   margin-top: 0.50em;
