--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -34,7 +34,7 @@ header {
 }
 
 header h1 a {
-  /*background: url(/images/pic.jpg) top center no-repeat;*/
+  background: url(/images/pic_.jpg) top center no-repeat;
   color: #FFFFFF;
   display: block;
   text-decoration: none;
