--- a/views/layout.erb
+++ b/views/layout.erb
@@ -22,7 +22,7 @@
   <header>
     <div class="pic"></div>
     <div class= "tk-apolline-sc"><h1><a href="./" title="Rabeet Fatmi">Rabeet Fatmi</a></h1></div>
-    <h4>Software Engineer / Web Developer</h4>
+    <h4>Actively seeking Software Engineering / Development roles</h4>
   </header>
 
   <%= yield %>
