--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 
   <title>Rabeet Fatmi</title>
-  <meta name="description" content="Rabeet Fatmi, Software Engineer from Florida Gulf Coast University.">
+  <meta name="description" content="Rabeet Fatmi, Software Engineering looking for full-time positions.">
   <meta name="author" content="Rabeet Fatmi">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
