--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -44,6 +44,7 @@ header h1 a {
 
 .pic {
   background: url(/images/pic.jpg) top center no-repeat;
+  background-size: 136px 136px;
   color: #FFFFFF;
   display: block;
   margin-top: 0.50em;
