--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -43,8 +43,7 @@ header h1 a {
 
 
 .pic {
-  background: url(/images/pic.jpg) top center no-repeat;
-  background-size: 136px 136px;
+  background: url(/images/pic_.jpg) top center no-repeat;
   color: #FFFFFF;
   display: block;
   margin-top: 0.50em;
