Not actively looking for jobs lol

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 
   <title>Rabeet Fatmi</title>
-  <meta name="description" content="Rabeet Fatmi, Software Engineering looking for full-time positions.">
+  <meta name="description" content="Rabeet Fatmi, Software Engineer.">
   <meta name="author" content="Rabeet Fatmi">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +22,7 @@
   <header>
     <div class="pic"></div>
     <div class= "tk-apolline-sc"><h1><a href="./" title="Rabeet Fatmi">Rabeet Fatmi</a></h1></div>
-    <h4>Actively seeking Software Engineering / Development roles</h4>
+    <h4>Software Engineer</h4>
   </header>
 
   <%= yield %>
